full-moon/tests/roblox_cases/fail/parser/generic_default_not_a_type_pack/source.lua
type Foo<T... = string> = nil
